Finished Medical Condition permanently! Added Progress bar and more error dialog boxes.

--- a/app/src/main/res/layout/activity_custom_dialog_box.xml
+++ b/app/src/main/res/layout/activity_custom_dialog_box.xml
@@ -11,6 +11,6 @@
         android:id="@+id/customTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"/>
+        android:textSize="18sp"/>
 
 </RelativeLayout>
