--- a/app/src/main/res/layout/activity_choice_register.xml
+++ b/app/src/main/res/layout/activity_choice_register.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".userprofile.ChoiceRegister">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/nav_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -50,4 +61,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.51" />
+
 </android.support.constraint.ConstraintLayout>
