--- a/app/src/main/res/layout/activity_patient_login.xml
+++ b/app/src/main/res/layout/activity_patient_login.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".userprofile.PatientLogin">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/nav_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/patientLoginEmail"
         android:layout_width="wrap_content"
