--- a/app/src/main/res/layout/content_patient_facilities_near_me_home.xml
+++ b/app/src/main/res/layout/content_patient_facilities_near_me_home.xml
@@ -47,14 +47,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Nearly Hospitals" />
+                        android:text="Nearby Hospitals" />
 
                     <Button
                         android:id="@+id/btnPharmacy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Nearly Pharmacy" />
+                        android:text="Nearby Pharmacy" />
                 </LinearLayout>
 
             </LinearLayout>
