--- a/app/src/main/res/layout/content_patient_profile_home.xml
+++ b/app/src/main/res/layout/content_patient_profile_home.xml
@@ -151,7 +151,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/profile_submit_button_text"/>
+                android:text="@string/profile_submit_button_text"
+                android:onClick="updateUserProfile"/>
 
         </LinearLayout>
 
