--- a/app/src/main/res/layout/content_patient_profile_home.xml
+++ b/app/src/main/res/layout/content_patient_profile_home.xml
@@ -36,7 +36,8 @@
                 <EditText
                     android:id="@+id/profileSurnameEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"/>
 
             </LinearLayout>
 
@@ -54,7 +55,8 @@
                 <EditText
                     android:id="@+id/profileOtherNameEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"/>
 
             </LinearLayout>
 
@@ -72,7 +74,8 @@
                 <EditText
                     android:id="@+id/profileGenderEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"/>
 
             </LinearLayout>
 
@@ -90,7 +93,8 @@
                 <EditText
                     android:id="@+id/profileAgeEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="number"/>
 
             </LinearLayout>
 
@@ -108,7 +112,8 @@
                 <EditText
                     android:id="@+id/profileHeightEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="number"/>
 
             </LinearLayout>
 
@@ -126,7 +131,8 @@
                 <EditText
                     android:id="@+id/profileWeightEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="number"/>
 
             </LinearLayout>
 
@@ -144,7 +150,8 @@
                 <EditText
                     android:id="@+id/profileAddressEt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="textPostalAddress"/>
 
             </LinearLayout>
 
