--- a/app/src/main/res/layout/content_patient_consult_doctor_home.xml
+++ b/app/src/main/res/layout/content_patient_consult_doctor_home.xml
@@ -26,10 +26,10 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:text="Condition :"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,10 +43,10 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:text="Description :"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,6 +106,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.474" />
 
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/imageViewPatient"
+            app:layout_constraintLeft_toRightOf="@+id/button4"
+            app:layout_constraintTop_toBottomOf="@+id/editText3"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"/>
+
         <Button
             android:id="@+id/selectfile1"
             android:layout_width="wrap_content"
@@ -160,13 +169,13 @@
             app:layout_constraintVertical_bias="0.248" />
 
         <Button
-            android:id="@+id/upload"
+            android:id="@+id/btnConsultDoctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="68dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="68dp"
             android:text="Consult Doctor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
