--- a/app/src/main/res/layout/dialog_changephoto.xml
+++ b/app/src/main/res/layout/dialog_changephoto.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Photo"
+        android:text="Photo or Video"
         android:textSize="21sp"
         android:textStyle="bold"
         android:textColor="@color/black"
