--- a/app/src/main/res/layout/doctor_content_recommendations_history_home.xml
+++ b/app/src/main/res/layout/doctor_content_recommendations_history_home.xml
@@ -2,10 +2,10 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout_doctor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userprofile.DoctorProfileActivity">
+    android:id="@+id/drawer_layout_doctor"
+    tools:context=".recommendationshistory.RecommendationsHistory">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,8 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-            
-            />
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
