--- a/app/src/main/res/layout/content_patient_consult_doctor_home.xml
+++ b/app/src/main/res/layout/content_patient_consult_doctor_home.xml
@@ -183,11 +183,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.963" />
 
-        <Button
+        <!--<Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TestDoctor"
-            android:onClick="openTestWindow"/>
+            android:onClick="openTestWindow"/>-->
 
         <TextView
             android:id="@+id/notification"
