--- a/app/src/main/res/layout/doctor_content_recommendations_history_home.xml
+++ b/app/src/main/res/layout/doctor_content_recommendations_history_home.xml
@@ -16,6 +16,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recommendationHistoryRecyclerView"
+            >
+
+       </android.support.v7.widget.RecyclerView>
+
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
