--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
+
+    <color name="WhiteColor">#FFFFFF</color>
+    <color name="Trans">#10000000</color>
+    <color name="P">#edf3534a</color>
+    <color name="heart_default">#E48674</color>
 </resources>
